--- a/BlackHole/BlackHole.vcxproj
+++ b/BlackHole/BlackHole.vcxproj
@@ -82,12 +82,14 @@
   <ItemGroup>
     <ClCompile Include="actor.cpp" />
     <ClCompile Include="level.cpp" />
+    <ClCompile Include="player.cpp" />
     <ClCompile Include="window.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="actor.h" />
     <ClInclude Include="level.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
