--- a/BlackHole/BlackHole.vcxproj.filters
+++ b/BlackHole/BlackHole.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="collisionmanager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="window.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="collisionmanager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
